Fixed extra white space in mobile devices

--- a/app/src/scss/_custom.scss
+++ b/app/src/scss/_custom.scss
@@ -1,6 +1,7 @@
 html, body {
     width: 100%;
     height: 100%;
+    overflow-x: hidden;
 }
 
 .text-medium {
@@ -14,6 +15,7 @@ html, body {
     margin: $base-margin-vertical 0;
 }
 
+// HERO 
 .hero {
     flex: 1;
     background: $dark;
@@ -57,6 +59,7 @@ html, body {
     }
 }
 
+// COMING SOON
 #coming-soon {
 
     position: relative;
@@ -84,6 +87,7 @@ html, body {
     
 }
 
+// FOOTER 
 .footer {
 
     .social {
